# darwin-os

./: .gitignore  CHANGELOG.md  LICENSE  README.md  headless_demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  visual_demo.py
darwin_os/: __init__.py  actions.py  conditions.py  controller.py  crisis_detector.py  digital_twin.py  dna.py  environment.py  evolution.py  scenarios.py  state.py  verifier.py
darwin_os/tests/: conftest.py  test_actions.py  test_controller.py  test_detector_integration.py  test_dna.py  test_end_to_end.py  test_environment.py  test_evolution.py  test_verifier.py
